// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorybookConfiguration generator should configure storybook to use webpack 5 1`] = `
"import type { StorybookConfig } from '@storybook/angular';


const config: StorybookConfig = {
  stories: [
    
    '../**/*.@(mdx|stories.@(js|jsx|ts|tsx))' ],
  addons: ['@storybook/addon-essentials' , '@storybook/addon-interactions' ],
  framework: {
    name: '@storybook/angular',
    options: {
      
    },
  },
  
};

export default config;


// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/recipes/storybook/custom-builder-configs



"
`;

exports[`StorybookConfiguration generator should configure storybook with interaction tests and install dependencies 1`] = `
"import type { Meta, StoryObj } from '@storybook/angular';
import { TestButton } from './test-button';
import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<TestButton> = {
  component: TestButton,
  title: 'TestButton',
};
export default meta;
type Story = StoryObj<TestButton>;

export const Primary: Story = {
  args: {
    buttonType: 'button',
    style: 'default',
    age: 0,
    isOn: false,
  },
};

export const Heading: Story = {
  args: {
    buttonType: 'button',
    style: 'default',
    age: 0,
    isOn: false,
  },
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    expect(canvas.getByText(/test-button works!/gi)).toBeTruthy();
  },
};
"
`;

exports[`StorybookConfiguration generator should configure storybook with interaction tests and install dependencies 2`] = `
"import type { Meta, StoryObj } from '@storybook/angular';
import { TestOther } from './test-other';
import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<TestOther> = {
  component: TestOther,
  title: 'TestOther',
};
export default meta;
type Story = StoryObj<TestOther>;

export const Primary: Story = {
  args: {},
};

export const Heading: Story = {
  args: {},
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    expect(canvas.getByText(/test-other works!/gi)).toBeTruthy();
  },
};
"
`;

exports[`StorybookConfiguration generator should generate in the correct folder 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "apps/.gitignore",
  "jest.config.ts",
  "jest.preset.js",
  "libs/.gitignore",
  "nx.json",
  "package.json",
  "test-ui-lib/.eslintrc.json",
  "test-ui-lib/.storybook/main.ts",
  "test-ui-lib/.storybook/preview.ts",
  "test-ui-lib/.storybook/tsconfig.json",
  "test-ui-lib/jest.config.ts",
  "test-ui-lib/package.json",
  "test-ui-lib/project.json",
  "test-ui-lib/README.md",
  "test-ui-lib/secondary-entry-point/ng-package.json",
  "test-ui-lib/secondary-entry-point/README.md",
  "test-ui-lib/secondary-entry-point/src/index.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.css",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.html",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.spec.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.stories.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-entry-point-module.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.css",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.html",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.spec.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.stories.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.ts",
  "test-ui-lib/src/index.ts",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.css",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.html",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.spec.ts",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.stories.ts",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.ts",
  "test-ui-lib/src/lib/barrel/barrel-button/index.ts",
  "test-ui-lib/src/lib/barrel/barrel-module.ts",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.css",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.html",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.spec.ts",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.stories.ts",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.ts",
  "test-ui-lib/src/lib/nested/nested-module.ts",
  "test-ui-lib/src/lib/standalone/standalone.css",
  "test-ui-lib/src/lib/standalone/standalone.html",
  "test-ui-lib/src/lib/standalone/standalone.spec.ts",
  "test-ui-lib/src/lib/standalone/standalone.stories.ts",
  "test-ui-lib/src/lib/standalone/standalone.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.css",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.html",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.spec.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.stories.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.css",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.html",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.spec.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.stories.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.ts",
  "test-ui-lib/src/lib/static-member-declarations/static-member-declarations-module.ts",
  "test-ui-lib/src/lib/test-button/test-button.css",
  "test-ui-lib/src/lib/test-button/test-button.html",
  "test-ui-lib/src/lib/test-button/test-button.spec.ts",
  "test-ui-lib/src/lib/test-button/test-button.stories.ts",
  "test-ui-lib/src/lib/test-button/test-button.ts",
  "test-ui-lib/src/lib/test-other/test-other.css",
  "test-ui-lib/src/lib/test-other/test-other.html",
  "test-ui-lib/src/lib/test-other/test-other.spec.ts",
  "test-ui-lib/src/lib/test-other/test-other.stories.ts",
  "test-ui-lib/src/lib/test-other/test-other.ts",
  "test-ui-lib/src/lib/test-ui-lib-module.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.css",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.html",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.spec.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.stories.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-module.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.css",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.html",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.spec.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.stories.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.css",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.html",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.spec.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.stories.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.css",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.html",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.spec.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.stories.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-module.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.css",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.html",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.spec.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.stories.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.ts",
  "test-ui-lib/src/test-setup.ts",
  "test-ui-lib/tsconfig.json",
  "test-ui-lib/tsconfig.lib.json",
  "test-ui-lib/tsconfig.spec.json",
  "tsconfig.base.json",
]
`;

exports[`StorybookConfiguration generator should generate the right files 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "apps/.gitignore",
  "jest.config.ts",
  "jest.preset.js",
  "libs/.gitignore",
  "nx.json",
  "package.json",
  "test-ui-lib/.eslintrc.json",
  "test-ui-lib/.storybook/main.ts",
  "test-ui-lib/.storybook/preview.ts",
  "test-ui-lib/.storybook/tsconfig.json",
  "test-ui-lib/jest.config.ts",
  "test-ui-lib/package.json",
  "test-ui-lib/project.json",
  "test-ui-lib/README.md",
  "test-ui-lib/secondary-entry-point/ng-package.json",
  "test-ui-lib/secondary-entry-point/README.md",
  "test-ui-lib/secondary-entry-point/src/index.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.css",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.html",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.spec.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.stories.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-entry-point-module.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.css",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.html",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.spec.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.stories.ts",
  "test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.ts",
  "test-ui-lib/src/index.ts",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.css",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.html",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.spec.ts",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.stories.ts",
  "test-ui-lib/src/lib/barrel/barrel-button/barrel-button.ts",
  "test-ui-lib/src/lib/barrel/barrel-button/index.ts",
  "test-ui-lib/src/lib/barrel/barrel-module.ts",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.css",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.html",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.spec.ts",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.stories.ts",
  "test-ui-lib/src/lib/nested/nested-button/nested-button.ts",
  "test-ui-lib/src/lib/nested/nested-module.ts",
  "test-ui-lib/src/lib/standalone/standalone.css",
  "test-ui-lib/src/lib/standalone/standalone.html",
  "test-ui-lib/src/lib/standalone/standalone.spec.ts",
  "test-ui-lib/src/lib/standalone/standalone.stories.ts",
  "test-ui-lib/src/lib/standalone/standalone.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.css",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.html",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.spec.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.stories.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.css",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.html",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.spec.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.stories.ts",
  "test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.ts",
  "test-ui-lib/src/lib/static-member-declarations/static-member-declarations-module.ts",
  "test-ui-lib/src/lib/test-button/test-button.css",
  "test-ui-lib/src/lib/test-button/test-button.html",
  "test-ui-lib/src/lib/test-button/test-button.spec.ts",
  "test-ui-lib/src/lib/test-button/test-button.stories.ts",
  "test-ui-lib/src/lib/test-button/test-button.ts",
  "test-ui-lib/src/lib/test-other/test-other.css",
  "test-ui-lib/src/lib/test-other/test-other.html",
  "test-ui-lib/src/lib/test-other/test-other.spec.ts",
  "test-ui-lib/src/lib/test-other/test-other.stories.ts",
  "test-ui-lib/src/lib/test-other/test-other.ts",
  "test-ui-lib/src/lib/test-ui-lib-module.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.css",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.html",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.spec.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.stories.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-module.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.css",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.html",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.spec.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.stories.ts",
  "test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.css",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.html",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.spec.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.stories.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.css",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.html",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.spec.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.stories.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-module.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.css",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.html",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.spec.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.stories.ts",
  "test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.ts",
  "test-ui-lib/src/test-setup.ts",
  "test-ui-lib/tsconfig.json",
  "test-ui-lib/tsconfig.lib.json",
  "test-ui-lib/tsconfig.spec.json",
  "tsconfig.base.json",
]
`;
